--- a/index.html
+++ b/index.html
@@ -13,25 +13,54 @@
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
+
+  <!--custom css -->
+  <link rel="stylesheet" href="./css/style.css">
+
 </head>
 <body>
 
-  Order Summary
+  <div class="container">
+    <main>
+      <div class="card">
+        <!-- Card image -->
 
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
+          <img src="./images/illustration-hero.svg" alt="hero" class="card-image">
 
-  Annual Plan
-  $59.99/year
+        <!-- Card content -->
+        <div class="card-content">
+          <!-- Top card -->
+          <h1 class="card-header"> Order Summary</h1>
+          <p class="card-description"> You can now listen to millions of songs, audiobooks, and podcasts on any 
+            device anywhere you like!</p>
 
-  Change
+            <!-- mid-card -->
+            <div class="card-info">
 
-  Proceed to Payment
-  Cancel Order
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+                <div class="primary-wrapper">
+                    <div class="sec-wrapper">
+                      <img src="./images/icon-music.svg" alt="music" class="card-music-icon">
+                      <div><h2 class="sub-header">Annual Plan</h2>
+                      <h3 class="price">$59.99/year</h3></div>
+                    </div>
+                  <a href="#"><h3 class="click">Change</h3></a>
+                </div>
+            </div>
+            <div class="btn">
+              <button class="card-button">Proceed to Payment</button>
+            </div>
+            <a href="" class="link"><h2 class="cancel"> Cancel Order</h2></a>
+        </div>
+
+      </div>
+    </main>
+    <div class="attribution" role="contentinfo">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">iSoyecodes</a>.
+    </div>
   </div>
+
+  
+  
 </body>
 </html>
